--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   # base_library基础组建库,包含：
   # Dart 常用工具类库 common_utils，
   # Flutter 常用工具类库 flustars，
@@ -27,6 +29,8 @@ dependencies:
   fluintl: ^0.1.3
   # Flutter 城市列表 https://github.com/flutterchina/azlistview
   azlistview: ^1.0.2
+  # https://github.com/flutterchina/dio
+  dio: 1.0.13
   r_dart_library: 0.4.0-nullsafety.0
   # https://github.com/Sky24n/common_utils
   common_utils: ^1.2.1
@@ -36,6 +40,10 @@ dependencies:
   sp_util: ^2.0.0
   # rxdart https://github.com/ReactiveX/rxdart
   rxdart: 0.22.6
+  # https://github.com/flutterchina/flukit.
+  flukit: ^1.0.2
+  # https://github.com/renefloor/flutter_cached_network_image
+  cached_network_image: 2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
