--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flukit: ^1.0.2
   # https://github.com/renefloor/flutter_cached_network_image
   cached_network_image: 2.0.0
+  # https://github.com/flutter/plugins/tree/master/packages/url_launcher
+  url_launcher: ^5.7.10
 dev_dependencies:
   flutter_test:
     sdk: flutter
